wisehands/admin/css/admin.css
/* ... */
.add-category-block .input-field label {
    left: 0;
    top: 1.5rem;
}

.add-category-row {
    display: flex;
    justify-content: space-between;
}

.delivery-edit-message {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.delivery-edit-message button {
    min-width: 37px;
}

.delivery-message-label{
    font-weight: 400;
}

.translation-flex-row{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.translation-flex-column{
    display: flex;
    flex-direction: column;
}
.flex-baseline{
    display: flex;
    align-items: center;
}
.translation-flex-row .flex-row p {
    padding-right: 10px;
}
.translation-flex-row .flex-row h4 {
    padding-right: 10px;
}

.admin-feedback-list {
    display: flex;
    flex-wrap: wrap;
}

.admin-feedback-list .admin-card {
    flex: 0 1 46%;
}

.admin-feedback-list .order-info {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.admin-feedback-list a {
    color: black;
}

.admin-feedback-list .feedback-stars {
    min-width: 107px;
}

.admin-contacts-card-gps h4 {
    padding: 1rem;
}

.admin-contacts-card-gps {
    padding: 0;
}

.admin-contacts-card-gps img {
    width: 100%;
}

.shop-location-title {
    text-align: center;
}

@media screen and (min-width: 1500px) {
    .admin-container {
        max-width: 1300px;
    }
}

@media screen and (max-width: 768px) {
    .add-product-block, .edit-product-block, .details-product-block, .payment-block-online, .addition-block, .working-hours-block, .settings-block {
        flex-direction: column;
    }

    .delivery-boundaries {
        flex-direction: column-reverse;
    }

    .m-left {
        margin-left: 0;
    }

    .load-product-image {
        height: 100%;
        min-height: 200px;
        margin-bottom: 1rem;
    }

    .save-button {
        margin: 1rem auto;
    }

    .admin-card {
        max-width: 95%;
        margin: 1rem;
        padding: 1rem;
    }

    .delivery-list, .payment-list {
        flex-direction: column;
        align-items: center;
    }

    .delivery-list-item {
        margin: 1rem 0;
    }

    .product-reviews-block {
        flex-direction: column-reverse;
    }

    .upload-favicon, .upload-logo {
        height: auto;
    }

    .upload-setting-img i {
        margin: 1rem 0 0 0;
    }

    .admin-card .upload-info-text {
        height: auto;
    }

    .order-details-image img, .feedback-order-details-image img {
        min-width: 60px;
        width: 60px;
        margin-right: 5px;
        object-fit: cover;
    }

    .product-feedback-text {
        margin-left: 65px;
    }

    .admin-feedback-list .admin-card {
        flex: 0 1 100%;
    }

    .admin-contacts-card-gps {
        padding: 0;
    }

}

@media screen and (max-width: 900px) {
    .user-settings-item {
        flex-basis: calc(50% - 2rem);
    }
}

@media screen and (max-width: 900px) {
    .user-settings-item {
        flex-basis: calc(100% - 2rem);
    }
}

